[package]
name = "melmacros"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
poise = "0.6.1"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros",
    "with-chrono", "with-json", "schema-sync", "entity-registry"]}
serde = { version = "1.0.228", features = ["derive"] }
serenity = "0.12.5"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.11"
tracing-subscriber = "0.3.22"
